# oreboot

./: Cargo.toml
src/mainboard/sunxi/nezha/bt0/: Cargo.toml  build.rs
src/mainboard/sunxi/nezha/bt0/.cargo/: config.toml
src/mainboard/sunxi/nezha/bt0/src/: flash.rs  logging.rs  main.rs  mctl.rs
src/mainboard/sunxi/nezha/main/: Cargo.toml
src/mainboard/sunxi/nezha/main/.cargo/: config.toml
src/mainboard/sunxi/nezha/main/src/: logging.rs  main.rs  peripheral.rs
src/soc/: Cargo.toml
src/soc/src/sunxi/d1/: mod.rs  uart.rs
xtask/src/: gdb_detect.rs
xtask/src/sunxi/: nezha.rs
