[workspace]
members = [
    "src/arch",
    "src/drivers",
    "src/console",
    "src/cpu",
    "src/soc",
    "payloads",

    "src/lib/*",
    "src/mainboard/aaeon/*",
    "src/mainboard/amd/*",
    "src/mainboard/asrock/*",
    "src/mainboard/ast/*",
    "src/mainboard/emulation/*",
    "src/mainboard/google/*",
    "src/mainboard/nuvoton/*",
    "src/mainboard/opentitan/*",
    "src/mainboard/seeed/*",
    "src/mainboard/sifive/*",
    "src/mainboard/sunxi/nezha/bt0",
    "src/mainboard/sunxi/nezha/main",

    "tools/layoutflash",

    "xtask",
]
default-members = ["xtask"]

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
lto = true

# Leave debug symbol information on release compilation mode
# That's okay, these symbols won't appear on flash binary
[profile.release]
opt-level = 'z'  # Optimize for size.
debug = true
lto = true
